--- a/iot-rest/pom.xml
+++ b/iot-rest/pom.xml
@@ -19,12 +19,6 @@
 
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
@@ -32,10 +26,22 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jetty</artifactId>
         </dependency>
+
+
+        <!--start iot-->
+
         <dependency>
             <groupId>com.nationalchip.iot</groupId>
             <artifactId>iot-security</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.nationalchip.iot</groupId>
+            <artifactId>iot-data</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <!--end iot-->
     </dependencies>
 </project>
