--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,6 @@
   <version>1.0-SNAPSHOT</version>
   <modules>
     <module>iot-security</module>
-    <module>iot-common</module>
     <module>iot-data</module>
     <module>iot-core</module>
     <module>iot-rest</module>
@@ -26,6 +25,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <spring.security.version>4.1.4.RELEASE</spring.security.version>
   </properties>
 
   <dependencies>
@@ -60,15 +60,23 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
+      <scope>test</scope>
     </dependency>
   </dependencies>
+
+
 
   <dependencyManagement>
     <dependencies>
       <dependency>
         <groupId>org.springframework.security</groupId>
         <artifactId>spring-security-core</artifactId>
-        <version>4.1.4.RELEASE</version>
+        <version>${spring.security.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-config</artifactId>
+        <version>${spring.security.version}</version>
       </dependency>
       <dependency>
         <groupId>com.google.guava</groupId>
