重构，理顺依赖关系

--- a/iot-security/iot-security-core/pom.xml
+++ b/iot-security/iot-security-core/pom.xml
@@ -46,7 +46,7 @@
         </dependency>
         <dependency>
             <groupId>com.nationalchip.iot</groupId>
-            <artifactId>iot-data</artifactId>
+            <artifactId>iot-data-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
