--- a/iot-data/iot-data-resource/pom.xml
+++ b/iot-data/iot-data-resource/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>iot-data-resources</artifactId>
+    <artifactId>iot-data-resource</artifactId>
 
     <name>iot-data-resources</name>
     <!-- FIXME change it to the project's website -->
@@ -27,6 +27,11 @@
             <artifactId>junit</artifactId>
             <version>4.11</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.nationalchip.iot</groupId>
+            <artifactId>iot-data-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
@@ -64,5 +69,15 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 </project>
