--- a/iot-rest/pom.xml
+++ b/iot-rest/pom.xml
@@ -42,7 +42,18 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.8.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.8.0</version>
+            <scope>compile</scope>
+        </dependency>
 
         <!--start iot-->
 
@@ -63,7 +74,7 @@
         </dependency>
         <dependency>
             <groupId>com.nationalchip.iot</groupId>
-            <artifactId>iot-data</artifactId>
+            <artifactId>iot-data-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
