--- a/iot-security/iot-security-rest/pom.xml
+++ b/iot-security/iot-security-rest/pom.xml
@@ -63,7 +63,7 @@
         </dependency>
         <dependency>
             <groupId>com.nationalchip.iot</groupId>
-            <artifactId>iot-data</artifactId>
+            <artifactId>iot-data-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
