--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <module>iot-cache</module>
     <module>iot-security</module>
       <module>iot-message</module>
+    <module>iot-data</module>
   </modules>
   <packaging>pom</packaging>
 
