--- a/iot-data/iot-data-jpa/src/main/resources/iot-data-default.properties
+++ b/iot-data/iot-data-jpa/src/main/resources/iot-data-default.properties
@@ -1,3 +1,4 @@
+##jpa\u914D\u7F6E
 spring.jpa.database=MYSQL
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://localhost:3306/iot
@@ -5,17 +6,9 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
-
-# Logging
+##jpa\u65E5\u5FD7
 spring.datasource.eclipselink.logging.logger=ServerLogger
 spring.jpa.properties.eclipselink.logging.level=FINEST
 spring.jpa.properties.eclipselink.logging.level.sql=FINEST
-# Cluster aware
-spring.datasource.eclipselink.query-results-cache=false
-spring.datasource.eclipselink.cache.shared.default=false
-# Flyway DDL
-#flyway.enabled=true
-#flyway.initOnMigrate=true
-#flyway.cleanDisabled=true
-#flyway.sqlMigrationSuffix=${spring.jpa.database}.sql
-### JPA / Datasource - END
+
+
