--- a/iot-message/pom.xml
+++ b/iot-message/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.integration</groupId>
+            <artifactId>spring-integration-mail</artifactId>
+            <version>4.1.3.RELEASE</version>
+        </dependency>
+        <dependency>
             <groupId>com.nationalchip.iot</groupId>
             <artifactId>iot-core</artifactId>
             <version>1.0-SNAPSHOT</version>
