--- a/iot-rest/src/main/resources/iot-rest-default.properties
+++ b/iot-rest/src/main/resources/iot-rest-default.properties
@@ -1,7 +1,8 @@
-#jwt
-iot.rest.jwt.alg=HS256
-iot.rest.jwt.secret=nationalchip
-iot.rest.jwt.issuer=system
-##format PxxDTxxHxxMxxS(Pxx天xx小时xx分钟xx秒)
-iot.rest.jwt.expiration=P7D
+##\u90AE\u4EF6\u5185\u5BB9\u914D\u7F6E
+#\u6FC0\u6D3B\u90AE\u4EF6\u5185\u5BB9
+iot.rest.validateMail=\u5C0A\u656C\u7684\u56FD\u82AF\u5F00\u53D1\u8005<br>\u4F60\u597D\uFF01<br>\u6B22\u8FCE\u6CE8\u518C\u6210\u4E3A\u56FD\u82AF\u5F00\u53D1\u8005\uFF0C\u60A8\u7684\u90AE\u7BB1\u6FC0\u6D3B\u9A8C\u8BC1\u7801\u4E3A\uFF1A<br>%s<br>\u8BF7\u5C06\u5176\u590D\u5236\u5230\u6CE8\u518C\u9875\u9762\uFF0C\u5B8C\u6210\u6CE8\u518C\u6D41\u7A0B\u3002
+#\u91CD\u7F6E\u5BC6\u7801\u5185\u5BB9
+iot.rest.resetpwdMail=\u5C0A\u656C\u7684\u56FD\u82AF\u5F00\u53D1\u8005<br>\u4F60\u597D\uFF01<br>\u91CD\u7F6E\u5BC6\u7801\u7684\u9A8C\u8BC1\u7801\u4E3A\uFF1A<br>%s<br>\u8BF7\u8F93\u5165\u5230\u91CD\u7F6E\u5BC6\u7801\u9875\u9762\u4EE5\u5B8C\u6210\u5BC6\u7801\u91CD\u7F6E\u6D41\u7A0B\u3002
+#\u6FC0\u6D3B\u90AE\u4EF6\u8FC7\u671F\u65F6\u95F4\uFF0C\u5355\u4F4D\u79D2
+iot.rest.validationExpiration=900
 
