--- a/iot-security/iot-security-rest/src/main/resources/iot-security-default.properties
+++ b/iot-security/iot-security-rest/src/main/resources/iot-security-default.properties
@@ -1,14 +1,17 @@
-//携带token的header名
+##\u5B89\u5168\u914D\u7F6E
+#\u5B89\u5168\u5934
 iot.security.jwt.header=Authorization
-
-//token前缀，注意前缀和token之前应空一格
+#token\u524D\u7F00\uFF0C\u6CE8\u610F\u524D\u7F00\u548Ctoken\u4E4B\u524D\u5E94\u7A7A\u4E00\u683C
 iot.security.jwt.prefix=Bearer
-
+#\u5185\u5EFA\u7684\u7528\u6237\u548C\u89D2\u8272
 iot.security.builtin.user=SYSTEM
 iot.security.builtin.role=SYSTEM
-#jwt
+
+##jwt\u914D\u7F6E
 iot.security.jwt.alg=HS256
 iot.security.jwt.secret=nationalchip
 iot.security.jwt.issuer=system
-##format PxxDTxxHxxMxxS(Pxx天xx小时xx分钟xx秒)
+#format PxxDTxxHxxMxxS(Pxx\u5929xx\u5C0F\u65F6xx\u5206\u949Fxx\u79D2)
 iot.security.jwt.expiration=P7D
+
+
