1.分离iot-data-api的依赖到iot-data-jpa中，优化依赖树 2.利用Slf4j实现EclipseLink日志记录器，统一系统日志记录

--- a/iot-rest/src/main/resources/application.properties
+++ b/iot-rest/src/main/resources/application.properties
@@ -1,4 +1,7 @@
+##Spring\u914D\u7F6E
 #\u57DF\u540D\u7ED1\u5B9A\u914D\u7F6E
 server.address=localhost
 server.context-path=
 server.port=8080
+
+logging.file=iot.log
