--- a/iot-data/iot-data-jpa/src/main/resources/iot-data-default.properties
+++ b/iot-data/iot-data-jpa/src/main/resources/iot-data-default.properties
@@ -6,9 +6,8 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
-##jpa\u65E5\u5FD7
-spring.datasource.eclipselink.logging.logger=ServerLogger
-spring.jpa.properties.eclipselink.logging.level=FINEST
-spring.jpa.properties.eclipselink.logging.level.sql=FINEST
+##jpa\u65E5\u5FD7\u914D\u7F6E
+#\u662F\u5426\u6253\u5370sql\u8BED\u53E5
+iot.data.jpa.show-sql=true
 
 
