1.引入dockerfile-maven-plugin插件，自动化docker 镜像的生成 2.编写dockerfile 3.编写服务编排文件 4.删除无用的文件

--- a/iot-rest/Dockerfile
+++ b/iot-rest/Dockerfile
@@ -2,14 +2,17 @@ FROM java:8-jre
 WORKDIR /iot
 
 ARG JAR_FILE
+ARG CONFIG_FILE
 
-COPY ${JAR_FILE}  ${WORKDIR}/app.jar
-COPY target/application*.properties /${WORKDIR}/
+COPY ${JAR_FILE}  /iot/app.jar
+COPY ${CONFIG_FILE} /etc/iot
+
+EXPOSE 8080
 
 VOLUME /log
 VOLUME /static
 VOLUME /config
 
-EXPOSE 8080 8081 8082 8083
 
-CMD ["java","-jar","-Duser.timezone=GMT+08","rest.jar","--spring.config.location=/config/"]
+#配置文件从/config/读取，日志存储在/log/iot.log中，注意将/config和/log映射到合适的位置
+ENTRYPOINT ["java","-jar","-Duser.timezone=GMT+08","app.jar","--spring.config.location=/config/","--logging.file=/log/iot.log"]
