--- a/iot-rest/src/main/resources/application.properties
+++ b/iot-rest/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 ##Spring\u914D\u7F6E
-#\u57DF\u540D\u7ED1\u5B9A\u914D\u7F6E
-server.address=localhost
-server.context-path=
+#\u9ED8\u8BA4\u76D1\u542C8080\u7AEF\u53E3
 server.port=8080
-
+#\u9ED8\u8BA4\u65E5\u5FD7\u6587\u4EF6
 logging.file=iot.log
+
