--- a/iot-data/iot-data-jpa/src/main/resources/iot-data-default.properties
+++ b/iot-data/iot-data-jpa/src/main/resources/iot-data-default.properties
@@ -7,7 +7,7 @@ spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 ##jpa\u65E5\u5FD7\u914D\u7F6E
-#\u662F\u5426\u6253\u5370sql\u8BED\u53E5
+#\u662F\u5426\u6253\u5370sql\u8BED\u53E5\uFF0C\u6CE8\u610F\u8BE5\u5F00\u5173\u9700\u8981\u548Cspring loggin.level=INFO(\u7EA7\u522B\u4E0D\u9AD8\u4E8EINFO\uFF0CINFO\u662F\u9ED8\u8BA4\u503C)\u914D\u5408\u4F7F\u7528
 iot.data.jpa.show-sql=true
 
 
