--- a/iot-data/iot-data-api/pom.xml
+++ b/iot-data/iot-data-api/pom.xml
@@ -45,5 +45,10 @@
             <artifactId>spring-security-core</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.nationalchip.iot</groupId>
+            <artifactId>iot-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
