--- a/iot-data/iot-data-jpa/pom.xml
+++ b/iot-data/iot-data-jpa/pom.xml
@@ -87,6 +87,15 @@
             <artifactId>org.eclipse.persistence.jpa</artifactId>
             <version>2.6.4</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
     </dependencies>
 
     <build>
