增加资源上传目录的Volume

--- a/iot-rest/Dockerfile
+++ b/iot-rest/Dockerfile
@@ -13,6 +13,9 @@ VOLUME /log
 VOLUME /static
 VOLUME /config
 
+#资源上载目录
+VOLUME /repo
+
 
 #配置文件从/config/读取，日志存储在/log/iot.log中，注意将/config和/log映射到合适的位置
 ENTRYPOINT ["java","-jar","-Duser.timezone=GMT+08","app.jar","--spring.config.location=/config/","--logging.file=/log/iot.log"]
