--- a/iot-data/iot-data-jpa/pom.xml
+++ b/iot-data/iot-data-jpa/pom.xml
@@ -100,6 +100,12 @@
             <artifactId>commons-io</artifactId>
             <version>2.4</version>
         </dependency>
+
+        <dependency>
+            <groupId>cz.jirutka.rsql</groupId>
+            <artifactId>rsql-parser</artifactId>
+            <version>2.1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
