分离验证码/用户/鉴权api

--- a/iot-data/iot-data-jpa/src/main/resources/iot-data-default.properties
+++ b/iot-data/iot-data-jpa/src/main/resources/iot-data-default.properties
@@ -20,7 +20,7 @@ iot.data.fs.repo=./repo
 #\u4E0A\u4F20\u8D44\u6E90\u76F8\u5BF9\u4E8Erepo\u7684\u76EE\u5F55
 iot.data.fs.resource=resource/
 
-iot.data.fs.image=image/
+iot.data.fs.image=/image
 
 iot.data.fs.news=news/
 
@@ -28,5 +28,8 @@ iot.data.fs.static=/statics/
 
 #\u7528\u6237\u5934\u50CF\u7684\u76F8\u5BF9repo\u7684\u76EE\u5F55
 iot.data.fs.avatar=avatar/
+
+#\u751F\u6210\u9A8C\u8BC1\u7801\u56FE\u7247\u7684\u5B58\u50A8\u8DEF\u5F84
+iot.data.fs.captcha=/captcha
 
 
