--- a/iot-message/src/main/resources/iot-message-default.properties
+++ b/iot-message/src/main/resources/iot-message-default.properties
@@ -6,3 +6,11 @@ spring.mail.password=zhq17681803790
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=false
 
+#\u9A8C\u8BC1\u7801\u53D1\u9001\u95F4\u9694\uFF0C\u5355\u4F4Ds
+iot.message.captcha.interval=0
+
+#\u9A8C\u8BC1\u7801\u6709\u6548\u671F\uFF0C\u5355\u4F4Ds
+iot.message.captcha.expiration=300
+
+#\u9A8C\u8BC1\u7801\u5728response headers\u4E2D\u7684key
+iot.message.captcha.key=Captcha-Key
