--- a/iot-rest/src/main/resources/application.properties
+++ b/iot-rest/src/main/resources/application.properties
@@ -4,3 +4,7 @@ server.port=8080
 #\u9ED8\u8BA4\u65E5\u5FD7\u6587\u4EF6
 logging.file=iot.log
 
+#json\u5E8F\u5217\u5316
+spring.jackson.serialization.write_dates_as_timestamps=false
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
