--- a/iot-cache/src/main/resources/iot-cache-default.properties
+++ b/iot-cache/src/main/resources/iot-cache-default.properties
@@ -9,4 +9,6 @@ spring.redis.port=6379
 spring.redis.timeout=10000
 
 
+#\u7F13\u5B58\u9ED8\u8BA4\u7684\u6709\u6548\u671F\uFF0C\u5355\u4F4D\u79D2
+iot.cache.interval=900
 
