--- a/iot-rest/src/main/resources/iot-rest-default.properties
+++ b/iot-rest/src/main/resources/iot-rest-default.properties
@@ -6,4 +6,8 @@ iot.rest.resetpwdMail=\u5C0A\u656C\u7684\u56FD\u82AF\u5F00\u53D1\u8005<br>\u4F60
 #\u6FC0\u6D3B\u90AE\u4EF6\u8FC7\u671F\u65F6\u95F4\uFF0C\u5355\u4F4D\u79D2
 iot.rest.validationExpiration=900
 
+#\u4F7F\u7528head\u65B9\u6CD5
+iot.rest.countHeader=Count
+iot.rest.existedHeader=Count
+
 
