记录用户登录的最后日期

--- a/iot-data/iot-data-jpa/src/main/resources/iot-data-default.properties
+++ b/iot-data/iot-data-jpa/src/main/resources/iot-data-default.properties
@@ -17,19 +17,10 @@ iot.data.jpa.show-sql=true
 #\u9759\u6001\u4E8C\u8FDB\u5236\u6587\u4EF6\u5B58\u50A8\u7684\u6839\u76EE\u5F55
 iot.data.fs.repo=./repo
 
-#\u4E0A\u4F20\u8D44\u6E90\u76F8\u5BF9\u4E8Erepo\u7684\u76EE\u5F55
-iot.data.fs.resource=resource/
+#\u9759\u6001\u8D44\u6E90\u5982\u56FE\u7247/\u89C6\u9891\u7B49\u7684url\u524D\u7F00\u5730\u5740
+iot.data.nginx.server=http://192.168.110.64/iot
 
-iot.data.fs.image=/image
-
-iot.data.fs.news=news/
-
-iot.data.fs.static=/statics/
-
-#\u7528\u6237\u5934\u50CF\u7684\u76F8\u5BF9repo\u7684\u76EE\u5F55
-iot.data.fs.avatar=avatar/
-
-#\u751F\u6210\u9A8C\u8BC1\u7801\u56FE\u7247\u7684\u5B58\u50A8\u8DEF\u5F84
-iot.data.fs.captcha=/captcha
+#\u9759\u6001\u8D44\u6E90\u7684\u6620\u5C04\u8DEF\u5F84\uFF0C\u9ED8\u8BA4\u7684\u6620\u5C04\u8DEF\u5F84\u4F4D\u4E8E\u540C\u4E00\u670D\u52A1\u5668\u4E0A
+iot.data.nginx.location=/var/www/iot/static
 
 
