--- a/iot-rest/src/main/resources/application.properties
+++ b/iot-rest/src/main/resources/application.properties
@@ -7,4 +7,6 @@ logging.file=iot.log
 #json\u5E8F\u5217\u5316
 spring.jackson.serialization.write_dates_as_timestamps=false
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+spring.jackson.date-format=yyyy-MM-dd
+spring.jackson.time-zone=GMT+8
 
