--- a/iot-data/iot-data-jpa/pom.xml
+++ b/iot-data/iot-data-jpa/pom.xml
@@ -60,6 +60,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>com.nationalchip.iot</groupId>
+            <artifactId>iot-security-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
         </dependency>
