--- a/iot-data/iot-data-api/pom.xml
+++ b/iot-data/iot-data-api/pom.xml
@@ -44,7 +44,11 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>com.nationalchip.iot</groupId>
+            <artifactId>iot-security-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>com.nationalchip.iot</groupId>
             <artifactId>iot-core</artifactId>
