--- a/iot-rest/pom.xml
+++ b/iot-rest/pom.xml
@@ -175,6 +175,11 @@
             <version>2.8.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
         <!--start iot-->
 
