--- a/iot-security/iot-security-core/src/main/resources/iot-security-core.properties
+++ b/iot-security/iot-security-core/src/main/resources/iot-security-core.properties
@@ -1,5 +1,5 @@
-#\u521D\u59CB\u7BA1\u7406\u5458\u8D26\u53F7\u548C\u5BC6\u7801
-iot.security.admin.username=admin
-iot.security.admin.password=admin
-iot.security.admin.ip=192.168.110.64
-iot.security.admin.mac=8c:89:a5:b7:7a:fc
+#\u7CFB\u7EDF\u8D85\u7EA7\u7BA1\u7406\u5458\u8D26\u53F7\u548C\u5BC6\u7801
+iot.security.system.username=system
+iot.security.system.password=system
+iot.security.system.ip=192.168.110.64
+iot.security.system.mac=8c:89:a5:b7:7a:fc
